# Data-Mining_Recommeder-System

./: README.md  complete_graph.py  evaluate_with_orgin.py  run_16_12_22_q1_top130_5cv_90%sp_1.sh  sim-cosine  socialfiltering
sim-cosine_yiming/: CMakeLists.txt  COPYRIGHT  Makefile  README.md  generic.mk  setup.mk
sim-cosine_yiming/arules/: apriori-simple.html  apriori-simple.py  apriori-wrapper.html  apriori-wrapper.py  arules-rec.html  arules-rec.py
sim-cosine_yiming/sf/: Makefile
sim-cosine_yiming/sf/source/: graph-util.c  graph.c  graph.h  main.cpp  socialfiltering.cpp  socialfiltering.hpp  wgraph.c  wgraph.h
sim-cosine_yiming/sim-cosine/: CMakeLists.txt  Makefile
sim-cosine_yiming/sim-cosine/source/: .main.cpp.swp  CMakeLists.txt  main.cpp  similarity.cpp  similarity.hpp
sim-cosine_yiming/sim-jaccard/: Makefile
sim-cosine_yiming/sim-jaccard/source/: main.cpp  similarity.cpp  similarity.hpp
